# Signet

./: .env.example  .gitignore  CLAUDE.md  README.md  Signet - QX Hack - Presentation - Deck.pptx  start_demo.sh
.github/workflows/: ci.yml
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ui.tsx
dashboard/src/lib/: api.ts
docs/: ARCHITECTURE.md  DECK.md  PRD.md  QA.md  RFC-DRAFT.md
docs/benchmark/: bench.py
docs/benchmark/results/: bench.csv  (+1 more)
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware-arduino/: README.md  platformio.ini
firmware-arduino/include/: config.h.example
firmware-arduino/src/: main.cpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: .env.example  demo_rogue.py  demo_seed.py  edge_gateway.py  llm_agent.py  simulate_edge_device.py  voice_demo.py
sdk-python/: pyproject.toml
sdk-python/signet/: __init__.py  cli.py  client.py  envelope.py  hsm.py  identity.py  kem.py  mcp.py  root.py  wrap.py
sdk-ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
sdk-ts/src/: canonical.ts  client.ts  envelope.ts  index.ts
sdk-ts/test/: canonical.test.ts  envelope.test.ts  interop.mjs
tests/: test_anomaly.py  test_cli.py  test_kem.py  test_merkle.py  test_policy.py  test_root.py  test_roundtrip.py  test_smt.py  test_tenancy.py  test_webhook_hmac.py  test_wrap.py  test_ws_stream.py
verifier/: .env.example  pyproject.toml  signet.db-shm  signet.db-wal
verifier/signet_verifier/: anomaly.py  db.py  kem.py  main.py  merkle.py  policy.py  smt.py  stream.py  webhooks.py
