[project]
name = "signet-agent"
version = "0.2.0"
description = "Signet SDK — post-quantum cryptographic identity for AI agents"
requires-python = ">=3.11"
dependencies = [
  "liboqs-python>=0.15",
  "httpx>=0.28",
  "pydantic>=2.13",
  "cryptography>=43",
]

[project.scripts]
signet = "signet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signet"]
